--- a/pizza form.html
+++ b/pizza form.html
@@ -153,7 +153,7 @@
 
 <script>
     $(document).ready(function () {
-        alert("Please Fill up these form first")
+        alert("Please Fill up these form")
     })
 </script>
 
