--- a/pizza form.html
+++ b/pizza form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -153,7 +153,7 @@
 
 <script>
     $(document).ready(function () {
-        alert("Please Fill up these form")
+        alert("Please Fill up these form heloo")
     })
 </script>
 
